--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "touchpoint",
+  "name": "dotpoint",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stringrays.github.io/dotpoint",
+  "homepage": "https://stringrays.github.com/dotpoint",
   "dependencies": {
     "@npmcli/arborist": "^6.1.6",
     "@react-pdf/renderer": "^3.0.2",
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
@@ -46,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
